prevents adding new line to txt files

--- a/home/dot_config/topgrade/config.toml
+++ b/home/dot_config/topgrade/config.toml
@@ -25,7 +25,7 @@
 # disable = ["system", "emacs"]
 
 # Ignore failures for these steps
-# ignore_failures = ["powershell"]
+ignore_failures = ["containers"]
 
 # List of remote machines with Topgrade installed on them
 # remote_topgrades = ["toothless", "pi", "parnas"]
