--- a/home/private_Library/private_Application Support/private_Cursor/User/settings.json
+++ b/home/private_Library/private_Application Support/private_Cursor/User/settings.json
@@ -1,40 +1,101 @@
 {
-    "editor.fontFamily": "MesloLGS NF",
-    "editor.fontLigatures": "true",
-    "editor.fontSize": 12,
-    "editor.formatOnSave": true,
-    "editor.letterSpacing": 0.5,
-    "editor.matchBrackets": "always",
-    "editor.minimap.showSlider": "always",
-    "editor.quickSuggestionsDelay": 30,
-    "editor.renderWhitespace": "none",
-    "editor.rulers": [
-        80,
-        100
-    ],
-    "editor.showFoldingControls": "always",
-    "editor.snippetSuggestions": "top",
-    "editor.suggestSelection": "first",
-    "editor.tabSize": 2,
-    "editor.unicodeHighlight.ambiguousCharacters": false,
-    "editor.wordWrap": "on",
-    "explorer.compactFolders": false,
-    "files.associations": {
-        "*.omnifocusjs": "javascript",
-        "*.tfvars": "terraform"
-    },
-    "workbench.colorTheme": "Catppuccin Mocha",
-    "workbench.iconTheme": "catppuccin-mocha",
-    "files.insertFinalNewline": true,
-    "files.trimTrailingWhitespace": true,
-    "git.allowForcePush": true,
-    "git.autofetch": true,
-    "git.confirmForcePush": false,
-    "git.confirmSync": false,
-    "git.openRepositoryInParentFolders": "always",
-    "terminal.integrated.defaultProfile.osx": "zsh",
-    "editor.accessibilitySupport": "off",
-    "gitlens.ai.model": "vscode",
-    "gitlens.ai.vscode.model": "copilot:gpt-4.1",
-    "security.workspace.trust.enabled": true,
+  "editor.accessibilitySupport": "off",
+  "editor.cursorSmoothCaretAnimation": "on",
+  "editor.fontFamily": "MesloLGS NF",
+  "editor.fontLigatures": "true",
+  "editor.fontSize": 12,
+  "editor.formatOnPaste": true,
+  "editor.formatOnSave": true,
+  "editor.letterSpacing": 0.5,
+  "editor.matchBrackets": "always",
+  "editor.minimap.showSlider": "always",
+  "editor.quickSuggestions": {
+    "comments": "on",
+    "strings": "on"
+  },
+  "editor.quickSuggestionsDelay": 1000000,
+  "editor.renderWhitespace": "none",
+  "editor.rulers": [80, 100],
+  "editor.showFoldingControls": "always",
+  "editor.snippetSuggestions": "top",
+  "editor.suggestSelection": "first",
+  "editor.tabCompletion": "on",
+  "editor.tabSize": 2,
+  "editor.unicodeHighlight.ambiguousCharacters": false,
+  "editor.wordWrap": "on",
+  "explorer.compactFolders": false,
+  "explorer.openEditors.visible": 1,
+  "files.associations": {
+    "*.omnifocusjs": "javascript",
+    "*.tfvars": "terraform"
+  },
+  "files.insertFinalNewline": true,
+  "files.trimTrailingWhitespace": true,
+  "git.allowForcePush": true,
+  "git.autofetch": true,
+  "git.confirmForcePush": false,
+  "git.openRepositoryInParentFolders": "always",
+  "gitlens.ai.model": "vscode",
+  "gitlens.ai.vscode.model": "copilot:gpt-4.1",
+  "prettier.arrowParens": "always",
+  "prettier.semi": true,
+  "prettier.singleQuote": true,
+  "prettier.trailingComma": "es5",
+  "security.workspace.trust.enabled": true,
+  "terminal.integrated.defaultProfile.osx": "zsh",
+  "workbench.colorTheme": "Catppuccin Mocha",
+  "workbench.iconTheme": "catppuccin-mocha",
+  "editor.minimap.enabled": true,
+  "editor.minimap.renderCharacters": false,
+  "editor.wordBasedSuggestions": "off",
+  "editor.cursorWidth": 5,
+  "git.confirmSync": false,
+  "git.enableSmartCommit": true,
+  "terminal.integrated.fontLigatures.enabled": true,
+  "explorer.confirmDelete": false,
+  "[json]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[html]": {
+    "editor.defaultFormatter": "vscode.html-language-features"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.cursorBlinking": "solid",
+  "editor.cursorStyle": "line-thin",
+  "vim.leader": "<space>",
+  "editor.lineNumbers": "relative",
+  "explorer.confirmDragAndDrop": false,
+  "workbench.editor.empty.hint": "hidden",
+  "git.ignoreRebaseWarning": true,
+  "terminal.integrated.fontSize": 10,
+  "workbench.activityBar.orientation": "vertical",
+  "cursor.cpp.disabledLanguages": ["markdown", "plaintext", "yaml"],
+  "vim.cursorStylePerMode.insert": "line-thin",
+  "vim.cursorStylePerMode.normal": "block",
+  "vim.cursorStylePerMode.replace": "block-outline",
+  "vim.easymotion": true,
+  "vim.targets.enable": true,
+  "vim.foldfix": true,
+  "vim.handleKeys": {
+    "<C-d>": true,
+    "<C-s>": false,
+    "<C-z>": false
+  },
+  "vsicons.dontShowNewVersionMessage": true,
+  "window.newWindowProfile": "Default",
+  "[go]": {
+    "editor.defaultFormatter": "golang.go"
+  }
 }
