Add .config/wezterm/assets/Wezterm Background Blurred Darker.png Add .config/wezterm/assets/Wezterm Background Blurred.png Update .config/wezterm/config/appearance.lua Add .config/wezterm/config/multiplexer.lua Update .config/wezterm/wezterm.lua Update Library/Application Support/Cursor/User/settings.json

--- a/home/private_Library/private_Application Support/private_Cursor/User/settings.json
+++ b/home/private_Library/private_Application Support/private_Cursor/User/settings.json
@@ -97,5 +97,8 @@
   "window.newWindowProfile": "Default",
   "[go]": {
     "editor.defaultFormatter": "golang.go"
+  },
+  "[lua]": {
+    "editor.defaultFormatter": "sumneko.lua"
   }
 }
