Refactor wezterm configuration: replace appearance template with static appearance.lua, update lualine settings in Neovim, and add tmux configuration file.

--- a/home/dot_config/tmux/tmux.conf
+++ b/home/dot_config/tmux/tmux.conf
@@ -25,11 +25,8 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 # Appearance
 ################################################################################
 # Configure Catppuccin
-{{ if eq .appearance  "light" -}}
-set -g @catppuccin_flavor "latte"
-{{- else -}}
+# set -g @catppuccin_flavor "latte"
 set -g @catppuccin_flavor "mocha"
-{{ end }}
 
 set -g @catppuccin_status_background "none"
 set -g @catppuccin_window_status_style "none"
