--- a/home/dot_config/fastfetch/config.jsonc
+++ b/home/dot_config/fastfetch/config.jsonc
@@ -1,46 +1,161 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+  "logo": {
+    "type": "builtin",
+    "height": 15,
+    "width": 30,
+    "padding": {
+      "top": 5,
+      "left": 3,
+    },
+  },
   "modules": [
-      {
-        "type": "title",
-        "fqdn": true
-      },
-      "separator",
-      "os",
-      "host",
-      "bios",
-      "kernel",
-      "uptime",
-      "loadavg",
-      "packages",
-      "shell",
-      "editor",
-      "display",
-      "brightness",
-      "monitor",
-      "terminal",
-      "terminalfont",
-      "terminalsize",
-      "terminaltheme",
-      {
-          "type": "cpu",
-          "showPeCoreCount": true
-      },
-      "cpuusage",
-      "gpu",
-      "memory",
-      "disk",
-      "battery",
-      "poweradapter",
-      "publicip",
-      {
-          "type": "localip",
-          "showIpV6": true,
-          "showMac": true
-      },
-      "physicaldisk",
-      "break",
-      "break",
-      "datetime"
-  ]
+    "break",
+    {
+      "type": "custom",
+      "format": "\u001b[90m┌──────────────────────Hardware──────────────────────┐",
+    },
+    {
+      "type": "host",
+      "key": "  Host",
+      "keyColor": "green",
+    },
+    {
+      "type": "cpu",
+      "key": "   CPU",
+      "keyColor": "green",
+    },
+    {
+      "type": "gpu",
+      "key": "   GPU",
+      "keyColor": "green",
+    },
+    {
+      "type": "memory",
+      "key": "   RAM",
+      "keyColor": "green",
+    },
+    {
+      "type": "disk",
+      "key": "   HDD",
+      "keyColor": "green",
+    },
+    {
+      "type": "custom",
+      "format": "\u001b[90m└────────────────────────────────────────────────────┘",
+    },
+    {
+      "type": "custom",
+      "format": "\u001b[90m┌──────────────────────Display───────────────────────┐",
+    },
+    {
+      "type": "display",
+      "key": "  Display",
+      "keyColor": "cyan",
+    },
+    {
+      "type": "custom",
+      "format": "\u001b[90m└────────────────────────────────────────────────────┘",
+    },
+    {
+      "type": "custom",
+      "format": "\u001b[90m┌──────────────────────Software──────────────────────┐",
+    },
+    {
+      "type": "os",
+      "key": "  OS",
+      "keyColor": "yellow",
+    },
+    {
+      "type": "kernel",
+      "key": "  Kernel",
+      "keyColor": "yellow",
+    },
+    {
+      "type": "bios",
+      "key": "  BIOS",
+      "keyColor": "yellow",
+    },
+    {
+      "type": "packages",
+      "key": "  Packages",
+      "keyColor": "yellow",
+    },
+    {
+      "type": "shell",
+      "key": "  Shell",
+      "keyColor": "yellow",
+    },
+    {
+      "type": "terminal",
+      "key": "  Terminal",
+      "keyColor": "yellow",
+    },
+    {
+      "type": "custom",
+      "format": "\u001b[90m└────────────────────────────────────────────────────┘",
+    },
+    {
+      "type": "custom",
+      "format": "\u001b[90m┌─────────────────────Networking─────────────────────┐",
+    },
+    {
+      "type": "publicip",
+      "key": "  Public IP",
+      "keyColor": "blue",
+    },
+    {
+      "type": "localip",
+      "key": "  Local IP",
+      "keyColor": "blue",
+    },
+    {
+      "type": "wifi",
+      "key": "  WiFi",
+      "keyColor": "blue",
+    },
+    {
+      "type": "dns",
+      "key": "  DNS",
+      "keyColor": "blue",
+    },
+    {
+      "type": "custom",
+      "format": "\u001b[90m└────────────────────────────────────────────────────┘",
+    },
+    {
+      "type": "custom",
+      "format": "\u001b[90m┌────────────────────Uptime / Age / DT───────────────┐",
+    },
+    {
+      "type": "command",
+      "key": "  OS Age ",
+      "keyColor": "magenta",
+      "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days",
+    },
+    {
+      "type": "uptime",
+      "key": "  Uptime ",
+      "keyColor": "magenta",
+    },
+    {
+      "type": "datetime",
+      "key": "  DateTime ",
+      "keyColor": "magenta",
+    },
+    {
+      "type": "custom",
+      "format": "\u001b[90m└────────────────────────────────────────────────────┘",
+    },
+
+    //        {
+    //            "type": "colors"
+    //        },
+
+    {
+      "type": "colors",
+      "paddingLeft": 2,
+      "symbol": "circle",
+    },
+  ],
 }
