Refactor configuration files: simplify appearance handling in .chezmoi.yaml.tmpl, add fastfetch to Windows packages, and adjust font directory path in .chezmoiexternal.yaml.

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -360,6 +360,7 @@ packages:
         - yazi
   windows:
     winget:
+      - fastfetch
       - JanDeDobbeleer.OhMyPosh
       - Microsoft.PowerShell
       - Microsoft.PowerToys
