Update .chezmoidata/packages.yaml Update Library/Application Support/Cursor/User/settings.json

--- a/home/private_Library/private_Application Support/private_Cursor/User/settings.json
+++ b/home/private_Library/private_Application Support/private_Cursor/User/settings.json
@@ -100,5 +100,9 @@
   },
   "[lua]": {
     "editor.defaultFormatter": "sumneko.lua"
+  },
+  "atlascode.bitbucket.enabled": false,
+  "yaml.schemas": {
+    "file:///Users/mark.schill/.cursor/extensions/atlassian.atlascode-4.0.14-universal/resources/schemas/pipelines-schema.json": "bitbucket-pipelines.yml"
   }
 }
