--- a/home/private_Library/private_Application Support/private_Cursor/User/settings.json
+++ b/home/private_Library/private_Application Support/private_Cursor/User/settings.json
@@ -104,5 +104,6 @@
   "atlascode.bitbucket.enabled": false,
   "yaml.schemas": {
     "file:///Users/mark.schill/.cursor/extensions/atlassian.atlascode-4.0.14-universal/resources/schemas/pipelines-schema.json": "bitbucket-pipelines.yml"
-  }
+  },
+  "atlascode.rovodev.showEntitlementNotifications": false
 }
