--- a/home/private_Library/private_Application Support/private_Cursor/User/settings.json
+++ b/home/private_Library/private_Application Support/private_Cursor/User/settings.json
@@ -11,7 +11,7 @@
   "editor.minimap.showSlider": "always",
   "editor.quickSuggestions": {
     "comments": "on",
-    "strings": "on",
+    "strings": "on"
   },
   "editor.quickSuggestionsDelay": 1000000,
   "editor.renderWhitespace": "none",
@@ -27,7 +27,7 @@
   "explorer.openEditors.visible": 1,
   "files.associations": {
     "*.omnifocusjs": "javascript",
-    "*.tfvars": "terraform",
+    "*.tfvars": "terraform"
   },
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
@@ -54,22 +54,22 @@
   "terminal.integrated.fontLigatures.enabled": true,
   "explorer.confirmDelete": false,
   "[json]": {
-    "editor.defaultFormatter": "vscode.json-language-features",
+    "editor.defaultFormatter": "vscode.json-language-features"
   },
   "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[html]": {
-    "editor.defaultFormatter": "vscode.html-language-features",
+    "editor.defaultFormatter": "vscode.html-language-features"
   },
   "[jsonc]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[typescriptreact]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[typescript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.cursorBlinking": "solid",
@@ -91,19 +91,25 @@
   "vim.handleKeys": {
     "<C-d>": true,
     "<C-s>": false,
-    "<C-z>": false,
+    "<C-z>": false
   },
   "vsicons.dontShowNewVersionMessage": true,
   "window.newWindowProfile": "Default",
   "[go]": {
-    "editor.defaultFormatter": "golang.go",
+    "editor.defaultFormatter": "golang.go"
   },
   "[lua]": {
-    "editor.defaultFormatter": "sumneko.lua",
+    "editor.defaultFormatter": "sumneko.lua"
   },
   "atlascode.bitbucket.enabled": false,
-  "yaml.schemas": {
-    "file:///Users/mark.schill/.cursor/extensions/atlassian.atlascode-4.0.17-universal/resources/schemas/pipelines-schema.json": "bitbucket-pipelines.yml",
-  },
   "atlascode.rovodev.showEntitlementNotifications": false,
+  "[terraform]": {
+    "editor.defaultFormatter": "hashicorp.terraform"
+  },
+  "[hcl]": {
+    "editor.defaultFormatter": "twiking.vscode-hcl-format"
+  },
+  "git.allowNoVerifyCommit": true,
+  "githubPullRequests.pullBranch": "never",
+  "githubPullRequests.pushBranch": "always"
 }
