Update .chezmoidata/packages.yaml Update Library/Application Support/Cursor/User/settings.json Update .gitconfig

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -202,7 +202,7 @@ packages:
         - name: textexpander
         - name: tower
         - name: visual-studio-code@insiders
-        - name: vivaldi # Used for primary personal browser
+        # - name: vivaldi # Used for primary personal browser
         - name: wezterm@nightly
       personal:
         - name: 1password
